--- a/.gitignore
+++ b/.gitignore
@@ -1,129 +1,82 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+import pygame
+import random
 
-# C extensions
-*.so
+# Initialize pygame
+pygame.init()
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# Set up the screen
+SCREEN_WIDTH, SCREEN_HEIGHT = 500, 600
+screen = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))
+pygame.display.set_caption("Tetris")
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Set up the game variables
+BLOCK_SIZE = 30
+BOARD_WIDTH, BOARD_HEIGHT = 10, 20
+board = [[0] * BOARD_WIDTH for _ in range(BOARD_HEIGHT)]
+shapes = [
+    [[[1, 1, 1], [0, 1, 0]], [255, 0, 0]],   # I-shape
+    [[[1, 1, 0], [0, 1, 1]], [0, 255, 0]],   # S-shape
+    [[[0, 1, 1], [1, 1, 0]], [0, 0, 255]],   # Z-shape
+    [[[1, 1], [1, 1]], [255, 255, 0]],       # O-shape
+    [[[1, 1, 1], [1, 0, 0]], [255, 0, 255]], # L-shape
+    [[[1, 1, 1], [0, 0, 1]], [0, 255, 255]], # J-shape
+    [[[0, 1, 0], [1, 1, 1]], [255, 128, 0]]  # T-shape
+]
+score = 0
+level = 1
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# Define the functions
+def draw_block(x, y, color):
+    """Draw a block on the board."""
+    pygame.draw.rect(screen, color, (x * BLOCK_SIZE, y * BLOCK_SIZE, BLOCK_SIZE, BLOCK_SIZE))
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
+def draw_board():
+    """Draw the entire board."""
+    for y, row in enumerate(board):
+        for x, block in enumerate(row):
+            if block:
+                draw_block(x, y, block)
 
-# Translations
-*.mo
-*.pot
+def new_block():
+    """Create a new block."""
+    shape = random.choice(shapes)
+    block = shape[0]
+    color = shape[1]
+    x = BOARD_WIDTH // 2 - len(block[0]) // 2
+    y = 0
+    return block, color, x, y
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+def draw_block_on_board(block, color, x, y):
+    """Draw a block on the board."""
+    for row, row_data in enumerate(block):
+        for col, block_data in enumerate(row_data):
+            if block_data:
+                draw_block(x + col, y + row, color)
 
-# Flask stuff:
-instance/
-.webassets-cache
+def remove_completed_lines():
+    """Remove completed lines and increase the score."""
+    global score
+    num_completed_lines = 0
+    for y, row in enumerate(board):
+        if 0 not in row:
+            board.pop(y)
+            board.insert(0, [0] * BOARD_WIDTH)
+            num_completed_lines += 1
+    if num_completed_lines:
+        score += 10 * num_completed_lines
+        if score >= level * 100:
+            level += 1
 
-# Scrapy stuff:
-.scrapy
+def game_over():
+    """Check if the game is over."""
+    for block in current_block:
+        x, y = block
+        if board[y][x]:
+            return True
+    return False
 
-# Sphinx documentation
-docs/_build/
+# Create the initial block
+current_block, current_color, current_x, current_y = new_block()
 
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
+# Start the game loop
+clock = pygame.time.Clock()
